fix broken layout

--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,13 @@ body{
 }
 /* #endregion common*/
 
+.container{
+    height: calc(100vh - 60px);
+}
 /* #region header*/
 header{
     background-color: black;
-    height: 10vh;
-    min-height: 45px;
+    height: 45px;
 }
 .main_header{
     justify-content: flex-end;
@@ -37,28 +39,29 @@ header{
     padding: 4px;
     height: 25px;
     border-radius: 5px;
-    margin: 3px 5px;
+    margin: 8px 5px;
 }
 /* #endregion header*/
 
 /* #region main*/
 main{
     background-color: black;
-    height: 80%;
-    min-height: 120px;
+    height: calc(100% - 45px);
     padding-bottom: 1rem;
+    overflow-y: auto;
 }
 .img_win{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     column-gap: 5px;
-    row-gap: 13px;
-    margin: 5px 5rem;
+    row-gap: 8px;
+    margin-top: 5px ;
+    margin-bottom: 5px ;
 }
 .user{
-    width: 186px;
-    height: 120px;
+    width: calc(100vw / 8);
+    height: 115px;
     color: white;
     background-image: url("https://i.picsum.photos/id/28/186/120.jpg?hmac=gNprvTKKpoOOOEqf0koVr7AbtpHrZqglq8526fmhheg");
     text-align: center;
@@ -75,7 +78,7 @@ main{
 footer{
     background-color: #222222;
     height: 12vh;
-    min-height: 60px;
+    height: 60px;
     color: white;
 }
 .cl_15{
